Mod for forge 1.12.2 were created
ForsCraftEasyPunishment mod is avaliable for minecraft forge 1.12.2 now. The
mod version is 1.0.0.

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,17 @@
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+        mavenCentral()
+        maven {
+            url = 'https://maven.minecraftforge.net/'
+        }
+        maven {
+            url = "https://repo.essential.gg/repository/maven-public"
+        }
+    }
+}
+
 rootProject.name = 'forscraft-easy-punishment'
+
+include 'forscraft-easy-punishment-1.12.2'
 
