--- a/settings.gradle
+++ b/settings.gradle
@@ -10,8 +10,5 @@ pluginManagement {
         }
     }
 }
-
-rootProject.name = 'forscraft-easy-punishment'
-
-include 'forscraft-easy-punishment-1.12.2'
+rootProject.name = 'forscraft-easy-punishment-1.12.2'
 
